--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,3 +1,31 @@
-h1 {
-    color:red;
+ ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+}
+body {
+width: 100%;
+left: 2042px;
+top: 194px;
+border-radius: 0px;
+position: relative;
+background-color: white;
+font-family:"raleway", sans-serif;
+margin: 0;
+}
+nav {
+    height: 19px;
+width: 381px;
+left: 982px;
+top: 48px;
+border-radius: 0px;
+position: absolute;
+}
+img {
+    position: absolute;
+    width: 61.09px;
+    height: 19px;
+    left: 0px;
+    top: 0px;
 }
