--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,30 +1,30 @@
 header {
     display: flex;
     justify-content: space-between;
-    padding: 1px;
     font-family:"raleway",sans-serif;
 }
 
-header #logo img {
-    width: 61px;
-    margin-top: 44px;
-    margin-left: 55px;
+header img {
+    width: 121px;
+    padding: 30px;
+    height: 79px;
 }
 
 header nav ul {
     display: flex;
-    list-style-type: none;
+    list-style-type:none;
     margin: 0;
+    padding: 0;
 }
 
 header nav ul li {
-    padding: 48px 25px;
+    margin: 0px 42px 0px 0px;
     border-top: 2px solid transparent;
-    margin: 0px 77px 0px 20px;
+    padding-top: 16px;
 }
 
 header nav ul li:hover {
-    border-color: blue;
+    border-color:blue;
 }
 
 header nav ul li a {
@@ -34,4 +34,7 @@ header nav ul li a {
 
 header nav ul li:hover a {
     color:blue;
+}
+body {
+    margin:0;
 }
