--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,7 +1,10 @@
+body {
+    margin:0px;
+    font-family:"raleway",sans-serif;
+}
 header {
     display: flex;
     justify-content: space-between;
-    font-family:"raleway",sans-serif;
 }
 
 header img {
@@ -35,9 +38,7 @@ header nav ul li a {
 header nav ul li:hover a {
     color:blue;
 }
-body {
-    margin:0px;
-}
+
 .entête {
     padding-left: 50px;
     padding-right: 50px;
@@ -102,7 +103,11 @@ form{
 .filtre-and-icone:hover{
     background-color:#DEEBFF;
     color: #F2F2F2;
-    border-color:#D9D9D9
+    border-color:#D9D9D9;
+}
+.filtre-and-icone > a {
+text-decoration: none;
+color: black;
 }
 .filter_icon{
     color: #0065fc;
@@ -111,4 +116,17 @@ form{
 }
 .mot-span {
     padding-right: 19px;
+}
+.info-logements {
+    display: flex;
+    align-items: flex-start;
+    padding-left: 50px;
+    padding-right: 50px;;
+}
+.info_icon {
+    padding: 3px 8px 3px 8px;
+    margin-right: 10px;
+    color: #0065fc;
+    border: 2px #F2F2F2 solid;
+    border-radius: 18px;
 }
