--- a/Css/styles.css
+++ b/Css/styles.css
@@ -130,3 +130,128 @@ color: black;
     border: 2px #F2F2F2 solid;
     border-radius: 18px;
 }
+#hebergements-and-populaires{
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.card-notes {
+    width: auto;
+}
+#bloc-hebergements{
+    border-radius: 20px;
+    width: 68%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    flex-direction: column;
+}
+.section-title{
+    padding: 20px 20px 20px 20px;
+    font-size: large;
+}
+.contenu-bloc-hotel{
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.hotel-card{
+    flex-direction: column;
+    width: 28%;
+    height: 220px;
+    border: 4px white solid;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-bottom: 25px;
+    box-shadow: 0px 0px 7px #C1C1C1;
+}
+.hotel-image{
+    height: 140px;
+    width: 100%;
+    object-fit: cover;
+}
+.hotel-card-description{
+    padding: 5px 0px 10px 10px;
+    flex-direction: column;
+    background-color: white;
+    border-top-left-radius: 15px;
+    width: 100%;
+    height: 30%;
+}
+.hotel-titre-card{
+    margin: 0px 0px 0px 0px;
+    font-size: 90%;
+}
+.hotel_prix{
+    margin: 5px 0px 5px 0px;
+    font-size: 80%;
+}
+#bloc-populaires{
+    border-radius: 20px;
+    width: 30%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    flex-direction: column;
+    padding-top: 20px;
+}
+.bloc-populaires-title{
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.populaire-title{
+    font-size: large;
+    margin: 0px 0px 5px 0px;
+}
+.contenu-bloc-populaires{
+    flex-direction: column;
+    align-items: center;
+
+}
+.populaire-card{
+    flex-direction: row;
+    width: 80%;
+    height: 146px;
+    border: 3px white solid;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-bottom: 25px;
+    box-shadow: 0px 0px 7px #C1C1C1;
+}
+.populaire-image{
+    width: 40%;
+    object-fit: cover;
+}
+.populaire-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    width: 60%;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 5px;
+}
+.populaire-titre{
+    font-size: 90%;
+}
+.populaire-prix{
+    margin: 5px 0px 15px 0px;
+    font-size: 80%;
+}
+.backgrey{
+    background-color: #F2F2F2;
+}
+.bluestar{
+    color: #0065fc;
+}
+.greystar{
+    color: #F2F2F2;
+}
+.euro{
+    font-weight: bold;
+}
+.flex{
+    display: flex;
+}
