--- a/Css/styles.css
+++ b/Css/styles.css
@@ -124,7 +124,7 @@ color: black;
 }
 .info-logements {
     display: flex;
-    align-items: flex-start;
+    align-items: baseline;
     padding-left: 50px;
     padding-right: 50px;;
 }
@@ -278,6 +278,7 @@ color: black;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-right: 30px;
 }
 .activité-card{
     height: 420px;
@@ -335,4 +336,71 @@ footer nav li a {
 .strong {
     font-size:18px;
     font-weight: 700;
+}
+
+@media all and (max-width: 1024px) {
+    .box-filtres{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #hebergements-and-populaires{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #bloc-hebergements{
+        width: 100%;
+    }
+    #bloc-populaires{
+        width: 100%;
+    }
+    #activité-bloc{
+        padding-left: 80px;
+        padding-right: 80px;
+    }
+    .activité-titre{
+        padding-bottom: 20px;
+
+    }
+    .activité-bloc-contenu{
+        display: flex;
+        flex-direction: column;
+
+        width: 100%;
+    }
+    .activité-contenu{
+        width: 100%;
+    }
+    .activité-card {
+        width: 100%;
+        height: 220px;
+    }
+    .activité-image {
+        height: 160px;
+        width: 100%;
+    }
+    .activité-card-description{
+        width: 100%;
+    }
+    .activité-titre-card{
+        width: 90%;
+        margin-top: 15px;
+        margin-right: 20px;
+    }
+    footer{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .contenu-bloc-populaires{
+        flex-direction: row;
+        justify-content: space-between;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+.footer-nav {
+    margin-right: 30px;
+    width: 288px;
+    height: 163px;
+}
 }
